--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--build:BUILD_TIME-->
     <meta charset="UTF-8">
-    <title>robe-react-ui Showcase</title>
+    <title>Robe React Admin UI</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="expires" content="0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
